--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.147",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.7.9",
     "aws-cdk": "2.178.1",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "aws-cdk-lib": "2.178.1",
+    "aws-lambda": "^1.0.7",
     "constructs": "^10.0.0"
   }
 }
