--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "typescript": "~5.6.3"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.744.0",
+    "@aws-sdk/lib-dynamodb": "^3.744.0",
     "aws-cdk-lib": "2.178.1",
     "aws-lambda": "^1.0.7",
     "constructs": "^10.0.0"
