DynamoDBからS3に変更

--- a/node-modules-layer/nodejs/package.json
+++ b/node-modules-layer/nodejs/package.json
@@ -9,7 +9,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.744.0",
-    "@aws-sdk/lib-dynamodb": "^3.744.0"
+    "@aws-sdk/client-s3": "^3.744.0"
   }
 }
