--- a/node-modules-layer/nodejs/package.json
+++ b/node-modules-layer/nodejs/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.744.0"
+    "@aws-sdk/client-s3": "^3.744.0",
+    "aws-lambda": "^1.0.7"
   }
 }
