--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.744.0",
+    "@aws-sdk/client-s3": "^3.749.0",
     "@aws-sdk/lib-dynamodb": "^3.744.0",
     "aws-cdk-lib": "2.178.1",
     "aws-lambda": "^1.0.7",
