settings.jsonのコメント変更

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
-// FYI: https://zenn.dev/levtech/articles/cc03a0f4d4dd47
+// FYI about biome: https://zenn.dev/levtech/articles/cc03a0f4d4dd47
 
 {
   "editor.formatOnSave": true,
